buildscript {
  repositories {
    maven {
      url "https://plugins.gradle.org/m2/"
    }
  }
  dependencies {
    classpath "edu.sc.seis.launch4j:launch4j:2.4.6"
  }
}
plugins {
	id 'edu.sc.seis.launch4j' version '2.4.6' apply false
}
allprojects {
	apply plugin: 'idea'
	apply plugin: 'eclipse'
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'checkstyle'

	compileJava.options.encoding = 'UTF-8'
	compileTestJava.options.encoding = 'UTF-8'
	sourceCompatibility = 1.11
	targetCompatibility = 1.11

	checkstyle.configFile = file('../checkstyle.xml')

	group = 'org.alltiny'

	repositories {
		mavenCentral()
	}
}

wrapper {
	gradleVersion = '7.6'
}
